--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.20.3",
+    "axios": "^1.7.6",
+    "bcrypt": "^5.1.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.0",
+    "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "sequelize": "^6.37.3",
+    "universal-cookie": "^7.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
